Transparent border to avoid shifting

--- a/_sass/components/_tabs.scss
+++ b/_sass/components/_tabs.scss
@@ -14,6 +14,7 @@
         text-decoration: underline;
         color: $color-dark;
       }
+      border: 1px solid transparent;
       &.active {
         background-color: $tabs-backgroundColor-active;
         border: 1px solid $tabs-borderColor;
